--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss-loader": "^2.1.3",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
+    "svg-inline-loader": "^0.8.0",
     "ts-loader": "^4.1.0",
     "typescript": "^2.8.1",
     "webpack": "^4.4.1",
