--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
+    "html-webpack-layout-plugin": "0.0.2",
     "html-webpack-plugin": "^3.1.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.8.3",
@@ -29,5 +30,8 @@
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@types/node": "^10.0.0",
+    "intersection-observer": "^0.5.0"
+  }
 }
