--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^8.2.0",
     "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.11",
+    "events": "^2.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
@@ -33,6 +34,7 @@
   },
   "dependencies": {
     "@types/node": "^10.0.0",
+    "core-js": "^2.5.5",
     "intersection-observer": "^0.5.0"
   }
 }
