--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "core-js": "^2.5.5",
     "intersection-observer": "^0.5.0",
     "load-google-maps-api": "^1.3.0",
+    "pixi.js": "^4.7.3",
     "smoothscroll": "^0.4.0",
     "what-input": "^5.0.5",
     "whatwg-fetch": "^2.0.4"
