--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/node": "^10.0.0",
     "core-js": "^2.5.5",
     "load-google-maps-api": "^1.3.0",
+    "smoothscroll": "^0.4.0",
     "what-input": "^5.0.5",
     "whatwg-fetch": "^2.0.4"
   }
