--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@types/node": "^10.0.0",
     "core-js": "^2.5.5",
+    "intersection-observer": "^0.5.0",
     "load-google-maps-api": "^1.3.0",
     "smoothscroll": "^0.4.0",
     "what-input": "^5.0.5",
