--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "svg-inline-loader": "^0.8.0",
     "ts-loader": "^4.1.0",
     "typescript": "^2.8.1",
+    "url-loader": "^1.0.1",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1"
