--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "intersection-observer": "^0.5.0",
     "load-google-maps-api": "^1.3.0",
     "pixi.js": "^4.7.3",
+    "script-ext-html-webpack-plugin": "^2.0.1",
     "smoothscroll": "^0.4.0",
     "what-input": "^5.0.5",
     "whatwg-fetch": "^2.0.4"
