--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^8.2.0",
+    "copy-webpack-plugin": "^4.5.2",
     "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.11",
     "events": "^2.0.0",
