--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --",
-    "build": "NODE_ENV=production webpack --mode production"
+    "build": "NODE_ENV=production webpack --mode production --json > stats.json"
   },
   "keywords": [],
   "author": "",
@@ -40,7 +40,7 @@
     "core-js": "^2.5.5",
     "intersection-observer": "^0.5.0",
     "load-google-maps-api": "^1.3.0",
-    "pixi.js": "^4.7.3",
+    "pixi.js": "5.0.0-alpha.3",
     "script-ext-html-webpack-plugin": "^2.0.1",
     "smoothscroll": "^0.4.0",
     "what-input": "^5.0.5",
