--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "^2.8.1",
     "url-loader": "^1.0.1",
     "webpack": "^4.4.1",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1"
   },
