--- a/package.json
+++ b/package.json
@@ -5,46 +5,45 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --",
-    "build": "NODE_ENV=production webpack --mode production --json > stats.json"
+    "build": "NODE_ENV=production webpack --mode production",
+    "build:stats": "NODE_ENV=production webpack --mode production--json > stats.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^8.2.0",
+    "autoprefixer": "^8.6.5",
     "copy-webpack-plugin": "^4.5.2",
-    "css-hot-loader": "^1.3.9",
+    "css-hot-loader": "^1.4.1",
     "css-loader": "^0.28.11",
-    "events": "^2.0.0",
+    "events": "^2.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-layout-plugin": "0.0.2",
-    "html-webpack-plugin": "^3.1.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.8.3",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "node-sass": "^4.9.2",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
-    "postcss-loader": "^2.1.3",
+    "postcss-loader": "^2.1.6",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "svg-inline-loader": "^0.8.0",
-    "ts-loader": "^4.1.0",
-    "typescript": "^2.8.1",
+    "ts-loader": "^4.4.2",
+    "typescript": "^2.9.2",
     "url-loader": "^1.0.1",
-    "webpack": "^4.4.1",
+    "webpack": "^4.16.3",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
-    "@types/node": "^10.0.0",
-    "core-js": "^2.5.5",
+    "@types/node": "^10.5.5",
+    "core-js": "^2.5.7",
     "intersection-observer": "^0.5.0",
     "load-google-maps-api": "^1.3.0",
-    "pixi.js": "5.0.0-alpha.3",
     "script-ext-html-webpack-plugin": "^2.0.1",
     "smoothscroll": "^0.4.0",
-    "what-input": "^5.0.5",
     "whatwg-fetch": "^2.0.4"
   }
 }
