--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "core-js": "^2.5.7",
     "intersection-observer": "^0.5.0",
     "load-google-maps-api": "^1.3.0",
+    "pixi.js": "^4.8.2",
     "script-ext-html-webpack-plugin": "^2.0.1",
     "smoothscroll": "^0.4.0",
     "whatwg-fetch": "^2.0.4"
